--- a/array-flatten/package.json
+++ b/array-flatten/package.json
@@ -4,7 +4,10 @@
   "description": "Write some code that will flatten an array of arbitrarily nested arrays of integers into a flat array of integers. e.g. [[1,2,[3]],4] -> [1,2,3,4]",
   "main": "index.js",
   "scripts": {
-    "clean": "rimraf build",
+    "clean": "rimraf build && rimraf dist",
+    "copy-to-dist": "cpy '**/*.js' '../dist/' --cwd=build --parents",
+    "predist": "npm run clean",
+    "dist": "npm run compile && npm run copy-to-dist",
     "compile": "tsc",
     "start": "ts-node src/index.ts",
     "start:w": "nodemon --watch src -e ts --ignore '*.spec.ts' --exec ts-node src/index.ts",
