--- a/array-flatten/package.json
+++ b/array-flatten/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "clean": "rimraf build && rimraf dist",
     "copy-to-dist": "cpy '**/*.js' '../dist/' --cwd=build --parents",
-    "predist": "npm run clean",
+    "predist": "npm run clean && npm test",
     "dist": "npm run compile && npm run copy-to-dist",
     "compile": "tsc",
     "start": "ts-node src/index.ts",
